--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "feaxlib"
 version = "0.9"
-# (also manually bump version in src/silfont/__init__.py)
+# (also manually bump version in src/feaxlib/__init__.py)
 authors = [{name = "SIL International", email = "fonts@sil.org"}]
 readme = "README.md"
 license = {file = "LICENSE"}
@@ -22,16 +22,18 @@ requires-python = ">=3.8"
 dependencies = [
 "ufoLib2",
 "fontTools",
+"silfont",
 ]
 
 [project.optional-dependencies]
 git = [
 "fonttools @ git+https://github.com/fonttools/fonttools",
 "ufoLib2 @ git+https://github.com/fonttools/ufoLib2",
+"silfont @ git+https://github.com/silnrsi/pysilfont",
 ]
 
 [project.urls]
-Home-Page = "https://github.com/silnrsi/pysilfont"
+Home-Page = "https://github.com/silnrsi/feax"
 
 [tool.setuptools.packages.find]
 where = ["src"]
