--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,9 @@ jobs:
           python -m pip install --upgrade pip setuptools
           python -m pip install pytest pytest-cov
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Install module
+        run: |
+          python -m pip install .
       - name: Test with pytest
         run: |
           pytest
