--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,10 +33,10 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13", "pypy3.9", "pypy3.10", "graalpy-24.0"]
-        exclude:
-          - os: windows-latest
-            python-version: graalpy-24.0
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"] #, "pypy3.9", "pypy3.10", "graalpy-24.0"]
+        # exclude:
+        #   - os: windows-latest
+        #     python-version: graalpy-24.0
 
     steps:
       - uses: actions/checkout@v4
@@ -49,7 +49,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip setuptools
           python -m pip install pytest pytest-cov
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          # if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Install module
         run: |
           python -m pip install .
