--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,10 @@
 name: Main
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+on: [push, pull_request]
 
 jobs:
   lint:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
       - name: Setup Python
@@ -37,7 +32,6 @@ jobs:
         # exclude:
         #   - os: windows-latest
         #     python-version: graalpy-24.0
-
     steps:
       - uses: actions/checkout@v4
       - name: Setup Python ${{ matrix.python-version }}
